# m3

./: .gitignore  Makefile
android/: build.sh
android/build-scripts/: 00-find-version.sh  00-google-breakpad.sh  00-install-boost.sh  10-apk-root.sh  20-icons.sh  40-build-lib.sh  50-apk-lib.sh  50-pngcrush.sh  60-apk.sh  70-hockeyapp.sh  config.sh
android/build-scripts/patches/: boost-filesystem.diff  boost-user-config.diff
android/components/beta/java/: google-services.json
android/components/prod/java/: google-services.json
android/java/: AndroidManifest.xml  build.gradle  release.keystore
android/java/gradle/wrapper/: gradle-wrapper.properties
android/java/res/values/: strings.xml
android/java/src/com/stuffomatic/ad/: InterstitialService.java
android/java/src/com/stuffomatic/apps/m3/: Application.java  MainActivity.java  Notifications.java
android/java/src/com/stuffomatic/apps/m3/rating/: RatingDialogListener.java
android/java/src/com/stuffomatic/apps/m3/receiver/: NotificationClicked.java  NotificationDismissed.java
android/java/src/com/stuffomatic/event/: EventManager.java
app/data/: config.json
app/data/config/: global.json
app/launcher/include/m3/app/: create_initial_level.hpp  launcher.hpp
app/launcher/src/m3/app/: create_initial_level.cpp  launcher.cpp  main.cpp
app/launcher/src/m3/app/android/: breakpad.cpp
app/lib/include/m3/app/: camera.hpp  create_level.hpp  gem_ring.hpp  input_controller.hpp
app/lib/include/m3/app/config/: get_config.hpp
app/lib/src/m3/app/: camera.cpp  create_level.cpp  gem_ring.cpp  input_controller.cpp
app/lib/src/m3/app/config/: get_config.cpp
cmake/: CMakeLists.txt
cmake/app/: CMakeLists.txt
cmake/app/assets/: CMakeLists.txt
cmake/app/launcher/: CMakeLists.txt
cmake/app/lib/: CMakeLists.txt
cmake/cmake-helper/: declare-test.cmake  google-test.cmake
cmake/modules/: CMakeLists.txt
cmake/modules/boost/: CMakeLists.txt
cmake/modules/core/: CMakeLists.txt
cmake/modules/core/tests/: CMakeLists.txt
cmake/modules/game/: CMakeLists.txt
cmake/modules/game/tests/: CMakeLists.txt
cmake/modules/math/: CMakeLists.txt
cmake/modules/math/tests/: CMakeLists.txt
cmake/modules/stl/: CMakeLists.txt
cmake/modules/table/: CMakeLists.txt
cmake/modules/table/tests/: CMakeLists.txt
modules/boost/include/m3/boost/: signals.hpp
modules/boost/src/m3/boost/: signals.cpp
modules/core/include/m3/: find_adjacent_ring_gems.hpp  game_loop.hpp  gem.hpp  gem_circle.hpp  gem_generator.hpp  gem_ring.hpp  random_ring_without_match.hpp
modules/core/src/m3/: find_adjacent_ring_gems.cpp  game_loop.cpp  gem_circle.cpp  gem_generator.cpp  gem_ring.cpp  random_ring_without_match.cpp
modules/core/tests/src/m3/: find_adjacent_ring_gems.cpp  gem_circle.cpp  gem_generator.cpp  gem_ring.cpp  random_ring_without_match.cpp
modules/game/include/m3/game/: find_adjacent_ring_gems.hpp  forward_destructions.hpp  game_loop.hpp  gem.hpp  gem_generator.hpp  gem_ring.hpp  random_ring_without_match.hpp
modules/game/src/m3/game/: find_adjacent_ring_gems.cpp  forward_destructions.cpp  game_loop.cpp  gem_generator.cpp  gem_ring.cpp  random_ring_without_match.cpp
modules/game/tests/src/m3/game/: find_adjacent_ring_gems.cpp  forward_destructions.cpp  gem_generator.cpp  gem_ring.cpp  random_ring_without_match.cpp
modules/math/include/m3/math/: circle_section_index.hpp  linear_range_interpolation.hpp  pi_times_2.hpp
modules/math/src/m3/math/: circle_section_index.cpp  linear_range_interpolation.cpp
modules/math/tests/src/m3/math/: circle_section_index.cpp  linear_range_interpolation.cpp
modules/stl/include/m3/stl/: function.hpp  vector.hpp
modules/stl/src/m3/stl/: function.cpp  vector.cpp
modules/table/include/m3/table/: generate_fragmented_indices.hpp
modules/table/src/m3/table/: generate_fragmented_indices.cpp
modules/table/tests/src/m3/table/: generate_fragmented_indices.cpp
